k8s/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-video-request-auth-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: fiap-video-request-auth-service
            port:
              number: 80
